@@ -32,3 +32,4 @@ v 1.2:
 	- GM will now create all relevant world data files for non mirrored worlds.
 	  (for all worlds named in config.yml)
 	- Attempt to stop GM wiping groups/users yml's on a bad shut down.
+	- Added event handling to manage new world creation at runtime.
